--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,56 +9,102 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/Botao"
-        android:layout_width="0dp"
+        android:id="@+id/minus"
+        android:layout_width="107dp"
         android:layout_height="0dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="108dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="16dp"
-        android:text="+1"
-        app:layout_constraintBottom_toTopOf="@+id/buttonRes"
-        app:layout_constraintEnd_toEndOf="@+id/buttonRes"
-        app:layout_constraintStart_toStartOf="@+id/buttonRes"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="15dp"
+        android:text="-"
+        app:layout_constraintBottom_toTopOf="@+id/mult"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ent1" />
+
+    <Button
+        android:id="@+id/div"
+        android:layout_width="107dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginBottom="416dp"
+        android:text="/"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/plus" />
+
+    <Button
+        android:id="@+id/mult"
+        android:layout_width="107dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="416dp"
+        android:text="X"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/minus" />
+
+    <Button
+        android:id="@+id/plus"
+        android:layout_width="107dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginBottom="15dp"
+        android:text="+"
+        app:layout_constraintBottom_toTopOf="@+id/div"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ent2" />
 
     <EditText
         android:id="@+id/Numero"
         android:layout_width="0dp"
-        android:layout_height="83dp"
-        android:layout_marginStart="62dp"
-        android:layout_marginTop="156dp"
-        android:layout_marginEnd="36dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="57dp"
+        android:editable="false"
         android:ems="10"
         android:inputType="number"
         android:textSize="34sp"
-        android:editable="false"
+        app:layout_constraintBottom_toTopOf="@+id/buttonRes"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonMin"
-        app:layout_constraintHorizontal_bias="0.215"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ent1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonRes"
-        android:layout_width="109dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="15dp"
+        android:layout_width="79dp"
+        android:layout_height="70dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="477dp"
         android:text="Reset"
-        app:layout_constraintBottom_toTopOf="@+id/buttonMin"
-        app:layout_constraintEnd_toEndOf="@+id/buttonMin"
-        app:layout_constraintTop_toBottomOf="@+id/Botao" />
-
-    <Button
-        android:id="@+id/buttonMin"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="84dp"
-        android:layout_marginBottom="455dp"
-        android:text="-1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Numero"
-        app:layout_constraintTop_toBottomOf="@+id/buttonRes" />
+        app:layout_constraintTop_toBottomOf="@+id/Numero" />
+
+    <EditText
+        android:id="@+id/ent1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="192dp"
+        android:layout_marginBottom="95dp"
+        android:inputType="number"
+        app:layout_constraintBottom_toTopOf="@+id/minus"
+        app:layout_constraintEnd_toStartOf="@+id/Numero"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/ent2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="68dp"
+        android:layout_marginBottom="95dp"
+        android:editable="false"
+        android:inputType="number"
+        app:layout_constraintBottom_toTopOf="@+id/plus"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
